# Voice2Prompt

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: pipeline.yaml
docs/: architecture.md
scripts/: benchmark.py  test_stages.py
tests/: test_pipeline.py  test_stage1.py  test_stage2.py  test_stage3.py
voice2prompt/: __init__.py  __main__.py  audio.py  hotkey.py  pipeline.py
voice2prompt/emit/: __init__.py  api_client.py
voice2prompt/stage1_stt/: __init__.py  filler_pass.py  transcriber.py
voice2prompt/stage2_formatter/: __init__.py  formatter.py
voice2prompt/stage3_compressor/: __init__.py  compressor.py
voice2prompt/utils/: __init__.py  device.py  logging.py
