[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice2prompt"
version = "0.2.0"
description = "Local voice-to-compressed-prompt pipeline for cloud LLM APIs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aayush Pathak", email = "aapathak@nvidia.com" }]
dependencies = [
    "httpx>=0.27.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ml = [
    "faster-whisper>=1.0.0",
    "soundfile>=0.12.1",
    "sounddevice>=0.4.6",
    "llama-cpp-python>=0.2.90",
    "llmlingua>=0.2.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "rouge-score>=0.1.2",
    "mypy>=1.9",
    "ruff>=0.4",
]
all = ["voice2prompt[dev,ml]"]

[project.scripts]
voice2prompt = "voice2prompt.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["voice2prompt*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
